<resources>
    <string name="app_name">CC Operation Config</string>
    <string name="error_internet_connection">Please check your internet connection.</string>
    <string name="ok">OK</string>
    <string name="error_api_msg">Something went wrong. Please try again.</string>
    <string name="Roboto_Black" translatable="false">Roboto-Black.ttf</string>
    <string name="Roboto_BlackItalic" translatable="false">Roboto-BlackItalic.ttf</string>
    <string name="Roboto_Light" translatable="false">Roboto-Light.ttf</string>
    <string name="Roboto_LightItalic" translatable="false">Roboto-LightItalic.ttf</string>
    <string name="Roboto_Medium" translatable="false">Roboto-Medium.ttf</string>
    <string name="Roboto_MediumItalic" translatable="false">Roboto-MediumItalic.ttf</string>
    <string name="Roboto_Thin" translatable="false">Roboto-Thin.ttf</string>
    <string name="Roboto_ThinItalic" translatable="false">Roboto-ThinItalic.ttf</string>
    <string name="Roboto_Regular" translatable="false">Roboto-Regular.ttf</string>
    <string name="Roboto_Bold" translatable="false">Roboto-Bold.ttf</string>
    <string name="Roboto_Italic" translatable="false">Roboto-Italic.ttf</string>
    <string name="Roboto_BoldItalic" translatable="false">Roboto-BoldItalic.ttf</string>
    <string name="Ubuntu_Regular" translatable="false">Ubuntu-Regular.ttf</string>
    <string name="Ubuntu_Bold" translatable="false">Ubuntu-Bold.ttf</string>
    <string name="Ubuntu_Italic" translatable="false">Ubuntu-Italic.ttf</string>
    <string name="Ubuntu_BoldItalic" translatable="false">Ubuntu-BoldItalic.ttf</string>
    <string name="Raleway_Regular" translatable="false">Raleway-Regular.ttf</string>
    <string name="Raleway_Bold" translatable="false">Raleway-Bold.ttf</string>
    <string name="Raleway_Italic" translatable="false">Raleway-Italic.ttf</string>
    <string name="Raleway_BoldItalic" translatable="false">Raleway-BoldItalic.ttf</string>
    <string name="OpenSans_Regular" translatable="false">OpenSans-Regular.ttf</string>
    <string name="OpenSans_Bold" translatable="false">OpenSans-Bold.ttf</string>
    <string name="OpenSans_Italic" translatable="false">OpenSans-Italic.ttf</string>
    <string name="OpenSans_BoldItalic" translatable="false">OpenSans-BoldItalic.ttf</string>
    <string name="icons" translatable="false">icons_new.ttf</string>
    <string name="font_icons" translatable="false">font_icons.ttf</string>
    <string name="circle_checkmark_icon" translatable="false">E</string>
    <string name="profile_icon" translatable="false">f2bd</string>
    <string name="profile_icon_1" translatable="false">e9b8</string>
    <string name="profile_icon_2" translatable="false">e9b9</string>
    <string name="profile_icon_3" translatable="false">e9ba</string>
    <string name="profile_icon_4" translatable="false">e9bb</string>
    <string name="live_icon" translatable="false">e908</string>
    <string name="live_icon_1" translatable="false">e9a8</string>
    <string name="live_icon_2" translatable="false">e9a9</string>
    <string name="live_icon_3" translatable="false">e9aa</string>
    <string name="live_icon_4" translatable="false">e9ab</string>
    <string name="tickets_icon" translatable="false">e909</string>
    <string name="tickets_icon_1" translatable="false">e975</string>
    <string name="tickets_icon_2" translatable="false">e976</string>
    <string name="tickets_icon_3" translatable="false">e977</string>
    <string name="tickets_icon_4" translatable="false">e978</string>
    <string name="bot_icon" translatable="false">e921</string>
    <string name="bot_icon_1" translatable="false">e9c1</string>
    <string name="bot_icon_2" translatable="false">e9c2</string>
    <string name="bot_icon_3" translatable="false">e9c3</string>
    <string name="bot_icon_4" translatable="false">e9c4</string>
    <string name="message_icon" translatable="false">f27a</string>
    <string name="message_icon_1" translatable="false">e9b0</string>
    <string name="message_icon_2" translatable="false">e9b1</string>
    <string name="message_icon_3" translatable="false">e9b2</string>
    <string name="message_icon_4" translatable="false">e9b3</string>
    <string name="message_icon_5" translatable="false">e9b4</string>
    <string name="timer_icon" translatable="false">e971</string>
    <string name="timer_icon_1" translatable="false">e979</string>
    <string name="timer_icon_2" translatable="false">e97a</string>
    <string name="timer_icon_3" translatable="false">e97b</string>
    <string name="timer_icon_4" translatable="false">e97d</string>
    <string name="disconnect_icon" translatable="false">e922</string>
    <string name="disconnect_icon_1" translatable="false">e99a</string>
    <string name="disconnect_icon_2" translatable="false">e99b</string>
    <string name="disconnect_icon_3" translatable="false">e99d</string>
    <string name="disconnect_icon_4" translatable="false">e99e</string>
    <string name="schedule_icon" translatable="false">e90c</string>
    <string name="schedule_icon_1" translatable="false">e98c</string>
    <string name="schedule_icon_2" translatable="false">e98e</string>
    <string name="schedule_icon_3" translatable="false">e98f</string>
    <string name="schedule_icon_4" translatable="false">e990</string>
    <string name="all_time_icon" translatable="false">f534</string>
    <string name="all_time_icon_1" translatable="false">ea29</string>
    <string name="all_time_icon_2" translatable="false">ea2a</string>
    <string name="all_time_icon_3" translatable="false">ea2b</string>
    <string name="all_time_icon_4" translatable="false">ea2c</string>
    <string name="user_icon" translatable="false">e923</string>
    <string name="user_icon_1" translatable="false">e9df</string>
    <string name="user_icon_2" translatable="false">e9e1</string>
    <string name="user_icon_3" translatable="false">e9e3</string>
    <string name="user_icon_4" translatable="false">e9dc</string>
    <string name="info_icon" translatable="false">f05a</string>
    <string name="info_icon_1" translatable="false">e964</string>
    <string name="info_icon_2" translatable="false">e965</string>
    <string name="info_icon_3" translatable="false">e966</string>
    <string name="info_icon_4" translatable="false">e967</string>
    <string name="notes_icon" translatable="false">e912</string>
    <string name="notes_icon_1" translatable="false">e960</string>
    <string name="notes_icon_2" translatable="false">e961</string>
    <string name="notes_icon_3" translatable="false">e962</string>
    <string name="notes_icon_4" translatable="false">e963</string>
    <string name="remove_icon" translatable="false">f056</string>
    <string name="remove_icon_1" translatable="false">e9dd</string>
    <string name="remove_icon_2" translatable="false">e9e0</string>
    <string name="remove_icon_3" translatable="false">e9e4</string>
    <string name="remove_icon_4" translatable="false">e9e5</string>
    <string name="training_mode_icon" translatable="false">e91e</string>
    <string name="training_mode_icon_1" translatable="false">e9a4</string>
    <string name="training_mode_icon_2" translatable="false">e970</string>
    <string name="training_mode_icon_3" translatable="false">e9ce</string>
    <string name="training_mode_icon_4" translatable="false">e9cf</string>
    <string name="end_session_icon" translatable="false">f2f5</string>
    <string name="end_session_icon_1" translatable="false">ea1c</string>
    <string name="end_session_icon_2" translatable="false">ea1d</string>
    <string name="end_session_icon_3" translatable="false">ea1e</string>
    <string name="end_session_icon_4" translatable="false">ea1f</string>
    <string name="whisper_icon" translatable="false">f1fa</string>
    <string name="interact_icon" translatable="false">f00d</string>
    <string name="bot_start_icon" translatable="false">e929</string>
    <string name="user_location_icon" translatable="false">e92a</string>
    <string name="manager_icon" translatable="false">e923</string>
    <string name="manager_icon_1" translatable="false">e9df</string>
    <string name="manager_icon_2" translatable="false">e9e1</string>
    <string name="manager_icon_3" translatable="false">e9e3</string>
    <string name="manager_icon_4" translatable="false">e9dc</string>
    <string name="supervisor_icon" translatable="false">e923</string>
    <string name="supervisor_icon_1" translatable="false">e9df</string>
    <string name="supervisor_icon_2" translatable="false">e9e1</string>
    <string name="supervisor_icon_3" translatable="false">e9e3</string>
    <string name="supervisor_icon_4" translatable="false">e9dc</string>
    <string name="agent_icon" translatable="false">e923</string>
    <string name="agent_icon_1" translatable="false">e9df</string>
    <string name="agent_icon_2" translatable="false">e9e1</string>
    <string name="agent_icon_3" translatable="false">e9e3</string>
    <string name="agent_icon_4" translatable="false">e9dc</string>
    <string name="green_flag_icon" translatable="false">e92b</string>
    <string name="green_flag_icon_1" translatable="false">e9d8</string>
    <string name="green_flag_icon_2" translatable="false">e9d9</string>
    <string name="green_flag_icon_3" translatable="false">e9da</string>
    <string name="green_flag_icon_4" translatable="false">e9db</string>
    <string name="umber_flag_icon" translatable="false">e92b</string>
    <string name="umber_flag_icon_1" translatable="false">e9d8</string>
    <string name="umber_flag_icon_2" translatable="false">e9d9</string>
    <string name="umber_flag_icon_3" translatable="false">e9da</string>
    <string name="umber_flag_icon_4" translatable="false">e9db</string>
    <string name="red_flag_icon" translatable="false">e92b</string>
    <string name="red_flag_icon_1" translatable="false">e9d8</string>
    <string name="red_flag_icon_2" translatable="false">e9d9</string>
    <string name="red_flag_icon_3" translatable="false">e9da</string>
    <string name="red_flag_icon_4" translatable="false">e9db</string>
    <string name="online_icon" translatable="false">f011</string>
    <string name="online_icon_1" translatable="false">ea2e</string>
    <string name="online_icon_2" translatable="false">ea2f</string>
    <string name="online_icon_3" translatable="false">ea30</string>
    <string name="online_icon_4" translatable="false">ea33</string>
    <string name="offline_icon" translatable="false">f011</string>
    <string name="offline_icon_1" translatable="false">ea2e</string>
    <string name="offline_icon_2" translatable="false">ea2f</string>
    <string name="offline_icon_3" translatable="false">ea30</string>
    <string name="offline_icon_4" translatable="false">ea33</string>
    <string name="upcoming_icon" translatable="false">e950</string>
    <string name="upcoming_icon_1" translatable="false">e97d</string>
    <string name="upcoming_icon_2" translatable="false">e97b</string>
    <string name="title">Title</string>
    <string name="font_type">Font type</string>
    <string name="main_tab">Main Tab</string>
    <string name="first_main_tab_sub_tab">First Main Tab\'s Sub Tab</string>
    <string name="first_sub_tab">First Sub Tab</string>
    <string name="second_sub_tab">Second Sub Tab</string>
    <string name="second_main_tab_sub_tab">Second Main Tab\'s Sub Tab</string>
    <string name="preview">Preview</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="back">Back</string>
    <string name="first_main_tab_name">First Main Tab Name</string>
    <string name="second_main_tab_name">Second Main Tab Name</string>
    <string name="button">Button</string>
    <string name="style">Style</string>
    <string name="view_details">View details</string>
    <string name="lbl_search">Search</string>
    <string name="icon_close">&#xf00D;</string>
    <string name="icon_search">&#xf002;</string>
</resources>