<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_button_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.magnates.operationConfig.customviews.CustomMaterialButton
        android:id="@+id/custom_material_button"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_10sdp"
        android:textSize="@dimen/_8ssp"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:customMaterialButtonFont="@string/Roboto_Light"
        app:strokeWidth="@dimen/_1sdp"
        app:strokeColor="@color/lightGray"
        android:backgroundTint="@color/white"
        android:textColor="@color/colorPrimary"
        android:text="@string/button"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap">

        <com.magnates.operationConfig.customviews.CustomTextView
            android:id="@+id/check_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:textColor="@color/colorCheckMark"
            android:text="@string/circle_checkmark_icon"
            android:textSize="@dimen/small_text_size"
            android:visibility="invisible"
            app:customFont="@string/icons" />
    </LinearLayout>

</RelativeLayout>

