<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_cardview_parent"
    android:layout_width="@dimen/_150sdp"
    android:layout_height="@dimen/_130sdp">

    <com.example.corechatoperationconfigapp.customviews.CustomMaterialCardView
        android:id="@+id/cv_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        android:layout_margin="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.example.corechatoperationconfigapp.customviews.CustomMaterialButton
                android:id="@+id/btn_header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:clickable="false"
                android:gravity="center"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="@dimen/_5sdp"
                android:textAlignment="center"
                android:text="@string/title"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorPrimary"
                android:textAllCaps="false"
                app:customMaterialButtonFont="@string/Roboto_Light"
                android:textSize="@dimen/_8ssp"/>

            <LinearLayout
                android:id="@+id/ll_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4">

                <com.example.corechatoperationconfigapp.customviews.CustomTextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:enabled="false"
                    android:text="@string/style"
                    android:textColor="@color/colorPrimary"
                    android:background="@color/white"
                    android:textSize="@dimen/_8ssp"
                    android:gravity="center"
                    app:customTextViewFont="@string/Roboto_Light" />

            </LinearLayout>

            <com.example.corechatoperationconfigapp.customviews.CustomMaterialButton
                android:id="@+id/btn_footer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:gravity="center"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="@dimen/_5sdp"
                android:textAlignment="center"
                android:text="@string/view_details"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorPrimary"
                android:textAllCaps="false"
                android:textSize="@dimen/_8ssp"
                app:customMaterialButtonFont="@string/Roboto_Light"/>

        </LinearLayout>
    </com.example.corechatoperationconfigapp.customviews.CustomMaterialCardView>

    <com.example.corechatoperationconfigapp.customviews.CustomTextView
        android:id="@+id/check_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:text="@string/circle_checkmark_icon"
        android:textColor="@color/colorCheckMark"
        android:textSize="@dimen/_10ssp"
        android:visibility="invisible"
        app:customTextViewFont="@string/icons"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>