<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.corechatoperationconfigapp.R" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <include
            android:id="@+id/header_layout"
            layout="@layout/toolbar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical"
            android:layout_below="@id/header_layout">

            <LinearLayout
                android:id="@+id/ll_font_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.example.corechatoperationconfigapp.customviews.CustomTextView
                    android:id="@+id/tv_font_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/font_type"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/medium_text_size" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <com.example.corechatoperationconfigapp.customviews.CustomTextView
                        android:id="@+id/tv_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bold"
                        android:textSize="@dimen/medium_text_size"
                        app:customFont="@string/Roboto_Light" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sw_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:textColor="@color/darkGray"
                        android:theme="@style/CustomSwitch" />

                    <com.example.corechatoperationconfigapp.customviews.CustomTextView
                        android:id="@+id/tv_italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:text="@string/italic"
                        android:textSize="@dimen/medium_text_size"
                        app:customFont="@string/Roboto_Light" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sw_italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:textColor="@color/darkGray"
                        android:theme="@style/CustomSwitch" />

                </LinearLayout>
            </LinearLayout>

            <com.example.corechatoperationconfigapp.customviews.CustomTextView
                android:id="@+id/tv_main_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/main_tab"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/medium_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.example.corechatoperationconfigapp.customviews.CustomEditText
                    android:id="@+id/et_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/first_main_tab_name"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/small_text_size"
                    app:customEditTextFont="@string/Roboto_LightItalic" />

                <com.example.corechatoperationconfigapp.customviews.CustomEditText
                    android:id="@+id/et_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/second_main_tab_name"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/small_text_size"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:customEditTextFont="@string/Roboto_LightItalic" />

            </LinearLayout>

            <com.example.corechatoperationconfigapp.customviews.CustomTextView
                android:id="@+id/tv_sub_tab_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/first_main_tab_sub_tab"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/medium_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.example.corechatoperationconfigapp.customviews.CustomEditText
                    android:id="@+id/et_first_main_tab_sub_tab_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/first_sub_tab"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/small_text_size"
                    app:customEditTextFont="@string/Roboto_LightItalic" />

                <com.example.corechatoperationconfigapp.customviews.CustomEditText
                    android:id="@+id/et_first_main_tab_sub_tab_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/second_sub_tab"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/small_text_size"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:customEditTextFont="@string/Roboto_LightItalic" />

            </LinearLayout>

            <com.example.corechatoperationconfigapp.customviews.CustomTextView
                android:id="@+id/tv_sub_tab_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/second_main_tab_sub_tab"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/medium_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.example.corechatoperationconfigapp.customviews.CustomEditText
                    android:id="@+id/et_second_main_tab_sub_tab_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/first_sub_tab"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/small_text_size"
                    app:customEditTextFont="@string/Roboto_LightItalic" />

                <com.example.corechatoperationconfigapp.customviews.CustomEditText
                    android:id="@+id/et_second_main_tab_sub_tab_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/second_sub_tab"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/small_text_size"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:customEditTextFont="@string/Roboto_LightItalic" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:layout_alignParentBottom="true">

            <com.example.corechatoperationconfigapp.customviews.CustomButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_left_corner_round"
                android:onClick="onClick"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/darkGray"
                app:customButtonFont="@string/Roboto_Light" />

            <com.example.corechatoperationconfigapp.customviews.CustomButton
                android:id="@+id/btn_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_right_corner_round"
                android:onClick="onClick"
                android:text="@string/preview"
                android:textAllCaps="false"
                android:textColor="@color/darkGray"
                app:customButtonFont="@string/Roboto_Light"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </RelativeLayout>
</layout>